--- a/style.css
+++ b/style.css
@@ -15,3 +15,25 @@ body {
 }
 
 /* your CSS below! */
+td {
+  background-color: lightgray;
+  width: 50px;
+  height: 50px;
+}
+
+.red {
+  background-color: red;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.green {
+  background-color: green;
+}
+
+.orange {
+  background-color: orange;
+}
+
